Added Google verification and SEO updates

--- a/index.html
+++ b/index.html
@@ -5,43 +5,27 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="googlea2cc549df1a25a76.html" />
+
+    <!-- SEO Meta Tags -->
     <title>Shopping HIFY - Your Ultimate Shopping Zone</title>
-    <meta name="description" content="Shopping HIFY is your go-to online store for amazing deals, top-quality products, and lightning-fast delivery in Pakistan." />
-    <meta name="keywords" content="Shopping HIFY, online store Pakistan, buy online, Lahore shopping, fashion, electronics, deals" />
+    <meta name="description" content="Shopping HIFY - The ultimate shopping destination for the best deals, quality products, and fast delivery. Owned by Ahsan Khan." />
+    <meta name="keywords" content="Shopping HIFY, online shopping, Ahsan Khan, Pakistan shopping, best deals, ecommerce, fast delivery" />
     <meta name="author" content="Ahsan Khan" />
 
-    <!-- Google Search Console Verification -->
-    <meta name="google-site-verification" content="googlea2cc549df1a25a76" />
-
-    <!-- Open Graph for Facebook -->
+    <!-- Open Graph Tags for Social Media -->
     <meta property="og:title" content="Shopping HIFY - Your Ultimate Shopping Zone" />
-    <meta property="og:description" content="Amazing deals, quality products, and lightning-fast delivery in Pakistan." />
-    <meta property="og:image" content="https://shopping-hify.vercel.app/logo.png" />
-    <meta property="og:url" content="https://shopping-hify.vercel.app/" />
+    <meta property="og:description" content="Owned and operated by Ahsan Khan. Get the best deals and fast delivery with Shopping HIFY." />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://shopping-hify.vercel.app" />
     <meta property="og:type" content="website" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Shopping HIFY - Your Ultimate Shopping Zone" />
-    <meta name="twitter:description" content="Amazing deals, quality products, and lightning-fast delivery in Pakistan." />
-    <meta name="twitter:image" content="https://shopping-hify.vercel.app/logo.png" />
-
-    <!-- Structured Data with Social Profiles -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Shopping HIFY",
-      "url": "https://shopping-hify.vercel.app/",
-      "logo": "https://shopping-hify.vercel.app/logo.png",
-      "sameAs": [
-        "https://www.facebook.com/ahsan.khan.857681",
-        "https://www.instagram.com/ahsankhan___23/?hl=en",
-        "https://www.tiktok.com/@ahsankhan_236",
-        "https://github.com/Ahsankhan2345/shopping-hify"
-      ]
-    }
-    </script>
+    <!-- Social Profile Links for SEO -->
+    <link rel="me" href="https://www.facebook.com/ahsan.khan.857681" />
+    <link rel="me" href="https://www.instagram.com/ahsankhan___23/?hl=en" />
+    <link rel="me" href="https://www.tiktok.com/@ahsankhan_236" />
+    <link rel="me" href="https://github.com/Ahsankhan2345/shopping-hify" />
 
     <!-- FontAwesome for social icons -->
     <link
