Added correct Google verification meta tag and SEO updates

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="googlea2cc549df1a25a76.html" />
+    <meta name="google-site-verification" content="6mVzX1Vj_0RSmyONwiHdU9WJB_omFu9u1bt6tzqUr9k" />
 
     <!-- SEO Meta Tags -->
     <title>Shopping HIFY - Your Ultimate Shopping Zone</title>
