--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google Site Verification -->
+    <!-- Google Site Verification - HTML File -->
+    <meta name="google-site-verification" content="googlea2cc549df1a25a76.html" />
+
+    <!-- Google Site Verification - Meta Tag -->
     <meta name="google-site-verification" content="6mVzX1Vj_0RSmyONwiHdU9WJB_omFu9u1bt6tzqUr9k" />
 
     <!-- SEO Meta Tags -->
