Added Google site verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Google Site Verification (Meta Tag Method) -->
+    <!-- Google Site Verification -->
     <meta name="google-site-verification" content="6mVzX1Vj_0RSmyONwiHdU9WJB_omFu9u1bt6tzqUr9k" />
 
     <!-- SEO Meta Tags -->
