--- a/src/index.html
+++ b/src/index.html
@@ -6,41 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Google Site Verification -->
-    <meta
-      name="google-site-verification"
-      content="6mVzX1Vj_0RSmyONwiHdU9WJB_omFu9u1bt6tzqUr9k"
-    />
+    <meta name="google-site-verification" content="6mVzX1Vj_0RSmyONwiHdU9WJB_omFu9u1bt6tzqUr9k" />
 
     <!-- SEO Meta Tags -->
     <title>Shopping HIFY - Your Ultimate Shopping Zone</title>
-    <meta
-      name="description"
-      content="Shopping HIFY - The ultimate shopping destination for the best deals, quality products, and fast delivery. Owned by Ahsan Khan."
-    />
-    <meta
-      name="keywords"
-      content="Shopping HIFY, online shopping, Ahsan Khan, Pakistan shopping, best deals, ecommerce, fast delivery"
-    />
+    <meta name="description" content="Shopping HIFY - The ultimate shopping destination for the best deals, quality products, and fast delivery. Owned by Ahsan Khan." />
+    <meta name="keywords" content="Shopping HIFY, online shopping, Ahsan Khan, Pakistan shopping, best deals, ecommerce, fast delivery" />
     <meta name="author" content="Ahsan Khan" />
 
     <!-- Open Graph Tags for Social Media -->
-    <meta
-      property="og:title"
-      content="Shopping HIFY - Your Ultimate Shopping Zone"
-    />
-    <meta
-      property="og:description"
-      content="Owned and operated by Ahsan Khan. Get the best deals and fast delivery with Shopping HIFY."
-    />
+    <meta property="og:title" content="Shopping HIFY - Your Ultimate Shopping Zone" />
+    <meta property="og:description" content="Owned and operated by Ahsan Khan. Get the best deals and fast delivery with Shopping HIFY." />
     <meta property="og:image" content="/logo.png" />
     <meta property="og:url" content="https://shopping-hify.vercel.app" />
     <meta property="og:type" content="website" />
-
-    <!-- Twitter Card for better sharing on Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Shopping HIFY - Your Ultimate Shopping Zone" />
-    <meta name="twitter:description" content="Best deals, fast delivery, and top-quality products from Shopping HIFY." />
-    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Social Profile Links for SEO -->
     <link rel="me" href="https://www.facebook.com/ahsan.khan.857681" />
