--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Shopping HIFY - Your Ultimate Shopping Zone</title>
+    <title>Shopnova AI - Your Ultimate Shopping Zone</title>
     <meta name="description" content="Shopping HIFY - The ultimate shopping destination for the best deals, quality products, and fast delivery. Owned by Ahsan Khan." />
     <meta name="keywords" content="Shopping HIFY, online shopping, Ahsan Khan, Pakistan shopping, best deals, ecommerce, fast delivery" />
     <meta name="author" content="Ahsan Khan" />
